  * TokenAuthenticatable now works with HTTP Basic Auth.
  * Allow :unlock_strategy to be :none and add :lock_strategy which can be :failed_attempts or none. Setting those values to :none means that you want to handle lock and unlocking by yourself.
  * No need to append ?unauthenticated=true in URLs anymore since Flash was moved to a middleware in Rails 3.

* bug fix
  * Do not allow unlockable strategies based on time to access a controller.
  * Do not send unlockable email several times.

* deprecations
  * Rails 3 compatible only.
  * Scoped views are no longer "sessions/users/new". Now use "users/sessions/new".
  * Devise.orm is deprecated, just require "devise/orm/YOUR_ORM" instead.
  * Devise.default_url_options is deprecated, just modify ApplicationController.default_url_options.

== 1.0.5

* bug fix
  * Use prepend_before_filter in require_no_authentication.
  * require_no_authentication on unlockable.
  * Fix a bug when giving an association proxy to devise.
  * Do not use lock! on lockable since it's part of ActiveRecord API.

== 1.0.4

* bug fix
  * Fixed a bug when deleting an account with rememberable
  * Fixed a bug with custom controllers

== 1.0.3

* enhancements
  * HTML e-mails now have proper formatting
  * Do not remove MongoMapper options in find

== 1.0.2

* enhancements
  * Allows you set mailer content type (by github.com/glennr)

* bug fix
  * Uses the same content type as request on http authenticatable 401 responses

== 1.0.1

* enhancements
  * HttpAuthenticatable is not added by default automatically.
  * Avoid mass assignment error messages with current password.

* bug fix
  * Fixed encryptors autoload

== 1.0.0

* deprecation
  * :old_password in update_with_password is deprecated, use :current_password instead

* enhancements
  * Added Registerable
  * Added Http Basic Authentication support
  * Allow scoped_views to be customized per controller/mailer class
  * [#99] Allow authenticatable to used in change_table statements
