@@ -56,7 +56,7 @@ module Devise
 
       if message.is_a?(Symbol)
         I18n.t(:"#{scope}.#{message}", :resource_name => scope,
-               :scope => [:devise, :sessions], :default => [message, message.to_s])
+               :scope => "devise.failure", :default => [message, message.to_s])
       else
         message.to_s
       end
